--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
     font-family: 'Poppin';
 }
 :root{
-    --background: rgb(24, 24, 24);
-    --second-background: rgb(21, 21, 21);
+    --background: rgb(24,24,24);
+    --second-background: rgb(21,21,21);
 }
 body{
     min-height: 100vh;
@@ -23,7 +23,7 @@ nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: rgba(15, 15, 15, 0.8);
+    background-color: rgba(15,15,15,0.8);
     backdrop-filter: blur(10px);
     z-index: 1000;
 }
@@ -38,7 +38,7 @@ nav ul a{
     transition: 0.2s ease-in-out;
 }
 nav ul a:hover{
-    opacity:1;
+    opacity: 1;
 }
 .logo{
     font-size: 2em;
@@ -104,10 +104,14 @@ section{
     font-size: 5em;
     font-weight: 500;
 }
+.info-box h3{
+    font-size: 2em;
+    font-weight: 400;
+}
 .info-box p{
     opacity: 0.7;
 }
-/*.btn-box{
+.btn-box{
     display: flex;
     gap: 1em;
 }
@@ -118,17 +122,72 @@ section{
 .btn-box .btn:nth-of-type(2):hover{
     background-color: var(--background);
     color: white;
-}*/
+}
 
 ::-webkit-scrollbar{
     width: 20px;
-    background-color:var(--background);
+    background-color: var(--background);
 }
 ::-webkit-scrollbar-thumb{
     background: linear-gradient(to bottom, #6cff52, #3ec5ff);
 }
 
-#educate{
+#about{
+    background-color: var(--background);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 5em;
+}
+#about img{
+    width: 30vw;
+    border-radius: 1em;
+}
+.about-box{
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+    gap: 2em;
+}
+.about-box h1{
+    font-size: 5em;
+}
+.about-box p{
+    color: white;
+    opacity: 0.8;
+}
+.skills{
+    display: flex;
+    text-align: left;
+    gap: 10em;
+}
+.skills ul{
+    font-size: 1.3em;
+    font-weight: 500;
+    display: flex;
+    flex-direction: column;
+    color: white;
+    opacity: 0.8;
+    align-items: baseline;
+}
+.skills ul li span{
+    display: flex;
+    align-items: center;
+    gap: 0.5em;
+    font-size: 1.3em;
+    transition: 0.3s ease-in-out;
+}
+.skills ul li span:hover{
+    transform: translateX(10px);
+}
+.skills ul li i{
+    font-size: 1.2em;
+}
+.about-box h2{
+    font-size: 2.5em;
+}
+
+#services{
     background-color: var(--background);
 }
 .header{
@@ -136,13 +195,13 @@ section{
     font-size: 5em;
     margin: 0.5em 0;
 }
-.education-container{
+.services-container{
     display: grid;
     grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
     gap: 2em;
 }
 .box{
-    border: 3px solid rgb(49, 49, 49);
+    border: 3px solid rgb(49,49,49);
     border-radius: 0.5em;
     display: flex;
     flex-direction: column;
@@ -156,7 +215,7 @@ section{
     transition: 0.3s ease-in-out;
 }
 .box:hover{
-    border: 3px solid rgb(100, 100, 100);
+    border: 3px solid rgb(100,100,100);
 }
 .box p{
     opacity: 0.8;
@@ -169,37 +228,173 @@ section{
     border-radius: 0.5em;
 }
 
-#locations{
-    background-color: var(--background);
+#contact{
+    background-color: var(--second-background);
+}
+form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2em;
+}
+form .input-box{
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    gap: 1em;
+}
+form input{
+    font-size: 1.3em;
+    padding: 1em 5em;
+    border-radius: 0.5em;
+    border: none;
+    outline: none;
+}
+form input:focus{
+    background: rgb(229.229,229);
+}
+
+footer{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 5em;
+    gap: 10em;
+    bottom: 0;
+    background-color: var(--background);
+    width: 100%;
+    padding: 5em 15%;
 }
-.header{
-    text-align: center;
-    font-size: 5em;
-    margin: 0.5em 0;
-}
-.location-container{
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
-    gap: 2em;
-}
-.location-box{
+.col-left{
     display: flex;
     flex-direction: column;
-    text-align: left;
-    gap: 2em;
+    gap: 1em;
 }
-.location-box h1{
-    font-size: 5em;
+.col-box{
+    display: flex;
+    align-items: center;
+    gap: 1em;
 }
-.location-box p{
+.col-box i{
+    font-size: 2em;
+}
+.col-box span{
+    font-size: 1.2em;
+}
+
+.col-right{
+    display:flex;
+    flex-direction: column;
+    gap: 1em;
     color: white;
-    opacity: 0.8;
+    max-width: 500px;
 }
-.location-box image{
-    min-width: 25px;
-    border-radius: 0.5em;
+.col-right span{
+    font-size: 1.3em;
+}
+.col-right .social-icons{
+    display: flex;
+    align-items: baseline;
+    justify-content: left;
+    gap: 1em;
+}
+.col-right .social-icons i{
+    font-size: 2em;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+.social-icons i:hover{
+    color: white;
+}
+
+@media(max-width:968px){
+    section{
+        padding: 8em 15%;
+    }
+    nav .btn{
+        display: none;
+    }
+    #menu{
+        display: block;
+    }
+    .links{
+        position: absolute;
+        top: 100%;
+        right: 0;
+        width: 100%;
+        padding: 1em 3em;
+        color: white;
+        display: flex;
+        flex-direction: column;
+        text-align: center;
+        background: rgba(0,0,0,0.9);
+        display: none;
+    }
+    .links a{
+        margin: 2em 0;
+        display: block;
+        font-size: 1.5em;
+        color: white;
+    }
+    .links.active{
+        display: block;
+    }
+
+    #home h1{
+        font-size: 4em;
+    }
+    #home h3{
+        font-size: 2em;
+    }
+    #home img{
+        width: 24vw;
+    }
+
+    #about{
+        flex-direction: column;
+    }
+    #about img{
+        width: 32vw;
+    }
+    #about h1{
+        font-size: 3em;
+    }
+    #about ul{
+        font-size: 1em;
+    }
+}
+@media(max-width:768px){
+    #home h1{
+        font-size: 2.5em;
+    }
+    #home h3{
+        font-size: 1.5em;
+    }
+    #home img{
+        width: 32vw;
+    }
+
+    #about .skills{
+        gap: 3em;
+    }
+
+    #services .header{
+        font-size: 3em;
+    }
+    
+    #contact .header{
+        font-size: 3em;
+    }
+    #contact .input-box span{
+        font-size: 1.2em;
+    }
+    .input-box input{
+        padding: 0.5em 1em;
+    }
+
+    footer{
+        flex-direction: column;
+        gap: 5em;
+        align-items: baseline;
+    }
 }
