--- a/style.css
+++ b/style.css
@@ -165,7 +165,7 @@ section{
     gap: 10em;
 }
 .location-container ul{
-    font-size: 1.3em;
+    font-size: 2em;
     font-weight: 500;
     display: flex;
     flex-direction: column;
@@ -177,14 +177,14 @@ section{
     display: flex;
     align-items: center;
     gap: 0.5em;
-    font-size: 1.3em;
+    font-size: 2em;
     transition: 0.3s ease-in-out;
 }
 .location-container ul li span:hover{
     transform: translateX(10px);
 }
-.location-container ul li i{
-    font-size: 1.2em;
+.location-container ul li a{
+    font-size: 2em;
 }
 /*.about-box h2{
     font-size: 2.5em;
