--- a/style.css
+++ b/style.css
@@ -186,6 +186,9 @@ section{
 .location-container ul li a{
     font-size: 2em;
 }
+.location-container ul li i{
+    font-size: 2em;
+}
 /*.about-box h2{
     font-size: 2.5em;
 }*/
