--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ nav{
     position: fixed;
     top: 0;
     width: 100%;
-    padding: 2em 15%;
+    padding: 0.8em 15%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,7 +30,7 @@ nav{
 ul{
     display: flex;
     align-items: center;
-    gap: 3em;
+    gap: 2em;
 }
 nav ul a{
     color: white;
@@ -72,7 +72,7 @@ span{
 }
 #menu{
     color: white;
-    font-size: 3em;
+    font-size: 2em;
     display: none;
 }
 section{
@@ -89,7 +89,7 @@ section{
     color: white;
 }
 #home img{
-    width: 18vw;
+    width: 25vw;
     border-radius: 50%;
     margin-top: 3em;
 }
@@ -135,9 +135,11 @@ section{
 #locations{
     background-color: var(--background);
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    gap: 5em;
+    gap: 2em;
+    padding: 1em;
 }
 /*#about img{
     width: 30vw;
@@ -145,53 +147,64 @@ section{
 }*/
 #locations h1{
     font-size: 5em;
+    text-align: left;
+    margin: 0;
 }
-/*.location-container{
+.location-container{
     display: flex;
     flex-direction: column;
     text-align: left;
-    gap: 2em;
+    gap: 1em;
 }
-.about-box h1{
+/*.about-box h1{
     font-size: 5em;
 }
 .about-box p{
     color: white;
     opacity: 0.8;
 }*/
-.location-container{
-    display: flex;
-    text-align: left;
-    gap: 10em;
-}
+
 .location-container ul{
     font-size: 2em;
     font-weight: 500;
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1em 4em;
     flex-direction: column;
     color: white;
     opacity: 0.8;
     align-items: baseline;
+    padding: 0;
+    margin: 0;
 }
 .location-container ul li span{
     display: flex;
     align-items: center;
     gap: 0.5em;
-    font-size: 2em;
+    font-size: 1.3em;
     transition: 0.3s ease-in-out;
 }
 .location-container ul li span:hover{
     transform: translateX(10px);
 }
 .location-container ul li a{
-    font-size: 2em;
+    font-size: 1.2em;
 }
 .location-container ul li i{
-    font-size: 2em;
+    font-size: 1.2em;
 }
 /*.about-box h2{
     font-size: 2.5em;
 }*/
+.location-container ul li a{
+    color: white;
+    text-decoration: underline;
+    font-weight: 500;
+}
+
+.location-container ul li a:hover{
+    color: rgb(180, 180, 180);
+}
 
 #guns{
     background-color: var(--background);
@@ -200,9 +213,31 @@ section{
     font-size: 5em;
 }
 .guns-container{
-    display: flex;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
     text-align: center;
-    gap: 10em;
+    justify-items: center;
+    gap: 2em;
+}
+.guns-container img{
+    /*width: 100%;
+    max-width: 400px;
+    /*aspect-ratio: 2/1;
+    object-fit: cover;
+    border-radius: 0.5em;*/
+    width: 100%;
+    height: 400px;
+    object-fit: contain;
+    border-radius: 0.5em;
+    background-color: var(--background);
+    padding: 0.5em;
+}
+.guns-container img.wide{
+    grid-column: span 2;
+    width: 100%;
+    max-width: 800px;
+    height: 400px;
+    object-fit: contain;
 }
 
 
@@ -217,15 +252,16 @@ section{
 }
 .education-container{
     display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(250px, 1fr));
-    gap: 2em;
+    grid-template-columns: repeat(auto-fit,minmax(350px, 1fr));
+    gap: 2.5em;
+    padding: 1em 2em;
 }
 .box{
     border: 3px solid rgb(49,49,49);
     border-radius: 0.5em;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     overflow: hidden;
     object-fit: cover;
     padding: 3em;
@@ -233,6 +269,17 @@ section{
     color: white;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+}
+.box ul{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5em;
+    padding-left: 1.5em;
+    margin: 0;
+}
+.box ul li{
+    list-style: disc;
+    opacity: 0.8;
 }
 .box:hover{
     border: 3px solid rgb(100,100,100);
@@ -248,7 +295,102 @@ section{
     border-radius: 0.5em;
 }
 
-#contact{
+#faqs {
+    background-color: var(--background);
+    padding: 3em 2em;
+}
+
+#faqs h1 {
+    text-align: center;
+    font-size: 5em;
+    margin-bottom: 1em;
+}
+
+.q-container h2 {
+    grid-column: 1 / -1;  /* spans across all columns */
+    text-align: center;
+    margin-top: 1em;
+    font-size: 2em;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    text-decoration: underline;
+}
+
+.q-container h2:hover{
+    transform: translateY(-10px);
+}
+
+
+.q-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(350px, 1fr)); /* flexible cards */
+    gap: 1em;
+}
+
+.question-box {
+    border: 3px solid rgb(49,49,49);
+    border-radius: 0.5em;
+    padding: 2em;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 1.5em;
+    color: white;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+}
+
+.question-box:hover {
+    border: 3px solid rgb(100,100,100);
+}
+
+.question-box span {
+    font-size: 1.4em;
+    font-weight: 600;
+    color: white;
+}
+
+.question-box p {
+    opacity: 0.85;
+    /*line-height: 1.5em;*/
+    text-align: left;
+    margin: 0;
+}
+
+.question-box ul {
+    /*display: flex;
+    flex-direction: column;
+    gap: 0.5em;*/
+    flex-direction: column;
+    list-style-type: disc;
+    list-style-position: inside;
+    /*padding-left: 1.5em; /* indentation for bullets */
+    margin: 0.5em 0;
+    text-align: left;
+    font-size: 1em;
+    opacity: 0.9;
+}
+
+.question-box ul li {
+    list-style: disc;
+    margin-bottom: 0.5em;
+}
+
+.question-box a{
+    color: white;
+    text-decoration: underline;
+    font-weight: 500;
+}
+
+.question-box a:hover{
+    color: rgb(180, 180, 180);
+    transform: translateX(10px);
+}
+
+
+
+/*#contact{
     background-color: var(--second-background);
 }
 form{
@@ -274,56 +416,82 @@ form input{
 form input:focus{
     background: rgb(229.229,229);
 }
+*/
 
 footer{
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 10em;
+    align-items: space-between;
+    justify-content: flex-start;
+    gap: 3em;
     bottom: 0;
     background-color: var(--background);
     width: 100%;
-    padding: 5em 15%;
+    padding: 2em 10%;
 }
-.col-left{
+.abouta-box{
     display: flex;
     flex-direction: column;
     gap: 1em;
+    color: white;
+    max-width:500px;
 }
-.col-box{
+/*.abouta-info{
     display: flex;
     align-items: center;
     gap: 1em;
-}
-.col-box i{
+}*/
+.abouta-info h1{
     font-size: 2em;
 }
-.col-box span{
+.abouta-info span{
+    font-size: 1.3em;
+}
+.abouta-info p{
     font-size: 1.2em;
 }
+.abouta-box .social-icons{
+    display: flex;
+    align-items: baseline;
+    justify-content: left;
+    gap: 1em;
+}
+.abouta-box .social-icons i{
+    font-size: 2em;
+    transition: 0.2s ease-in-out;
+    cursor: pointer;
+}
+.abouta-box i:hover{
+    color: white;
+}
 
-.col-right{
+.aboutd-box{
     display:flex;
     flex-direction: column;
     gap: 1em;
     color: white;
     max-width: 500px;
 }
-.col-right span{
-    font-size: 1.3em;
+.aboutd-info h1{
+    font-size: 2em;
 }
-.col-right .social-icons{
+.aboutd-info span{
+    font-size: 1.2em;
+}
+.aboutd-info p{
+    font-size: 1.2em;
+}
+.aboutd-box .social-icons{
     display: flex;
     align-items: baseline;
     justify-content: left;
     gap: 1em;
 }
-.col-right .social-icons i{
+.aboutd-box .social-icons i{
     font-size: 2em;
     transition: 0.2s ease-in-out;
     cursor: pointer;
 }
-.social-icons i:hover{
+.aboutd-box i:hover{
     color: white;
 }
 
@@ -401,6 +569,10 @@ footer{
     #services .header{
         font-size: 3em;
     }
+
+    .guns-container {
+        grid-template-columns: 1fr;
+    }
     
     #contact .header{
         font-size: 3em;
@@ -414,7 +586,7 @@ footer{
 
     footer{
         flex-direction: column;
-        gap: 5em;
+        gap: 2em;
         align-items: baseline;
     }
 }
