--- a/style.css
+++ b/style.css
@@ -315,6 +315,12 @@ section{
     cursor: pointer;
     transition: 0.3s ease-in-out;
     text-decoration: underline;
+
+}
+.q-container h2 a {
+    color: white;
+    text-decoration: underline;
+    font-weight: 500;
 }
 
 .q-container h2:hover{
