--- a/faq.css
+++ b/faq.css
@@ -67,7 +67,7 @@ nav ul a:hover{
     background-color: white;
     color: var(--background);
 }*/
-nav span{
+span{
     background: linear-gradient(to right, #6cff52, #3ec5ff);
     background-clip: text;
     color: transparent;
@@ -96,6 +96,7 @@ header {
     padding: 1.5rem;
     text-align: center;
     border-bottom: 3px solid #444;
+    margin-top: 5rem;
 }
 
 header h1 {
